# econkit

./: README.md  _utils.py  pyproject.toml
accessor/: __init__.py  _validate.py
analyze/: forecast.py  timeseries.py
econkit/: __init__.py  _types.py
econkit/accessor/: _change.py  _registry.py  _stats.py  _transform.py
econkit/analyze/: __init__.py  _results.py  comparative.py  descriptive.py
econkit/factors/: __init__.py  grouped.py
econkit/fetch/: __init__.py  _parsers.py  ecos.py  fisis.py  oecd.py
econkit/plot/: bar.py  heatmap.py  line.py  scatter.py
factors/: single.py
fetch/: _base.py  fred.py
plot/: __init__.py  _base.py  dashboard.py
